<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- FAQ Title -->

        <!-- Existing Questions and Answers -->
        <!-- Question 1 -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:fontFamily="serif-monospace"
            android:text="@string/frequently_asked_questions"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="96sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="serif-monospace"
            android:text="@string/q_how_do_i_create_an_account"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="serif-monospace"
            android:text="@string/a_how_to_create_account"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="serif-monospace"
            android:text="@string/q_how_do_i_reset_my_password"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="serif-monospace"
            android:text="@string/a_how_to_reset_password"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="serif-monospace"
            android:text="@string/q_how_do_i_change_my_email_address"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="serif-monospace"
            android:text="@string/a_how_to_change_email_address"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="serif-monospace"
            android:text="@string/q_can_i_use_this_app_on_multiple_devices"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="serif-monospace"
            android:text="@string/a_can_i_use_this_app_on_multiple_devices"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="serif-monospace"
            android:text="@string/q_how_long_will_system_battery_last"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="serif-monospace"
            android:text="@string/a_how_long_will_system_battery_last"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="serif-monospace"
            android:text="@string/q_what_can_i_do_with_camera_led_buttons"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="serif-monospace"
            android:text="@string/a_what_can_i_do_with_camera_led_buttons"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="serif-monospace"
            android:text="@string/q_how_can_i_connect_app_to_system"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="serif-monospace"
            android:text="@string/a_how_can_i_connect_app_to_system"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>
</ScrollView>