<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Page Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="serif-monospace"
        android:text="@string/settings_title"
        android:textColor="@android:color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <!-- Email Address Change Button -->
    <Button
        android:id="@+id/emailChangeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button_green"
        android:fontFamily="serif-monospace"
        android:padding="12dp"
        android:text="@string/email_change"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <!-- Remove the Password Reset Button -->

    <!-- FAQ Button -->
    <Button
        android:id="@+id/faqButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button_green"
        android:fontFamily="serif-monospace"
        android:padding="12dp"
        android:text="@string/faq"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <!-- Logout Button -->
    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button_green"
        android:fontFamily="serif-monospace"
        android:padding="12dp"
        android:text="@string/logout"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />


</LinearLayout>